// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<header
  className="page-header projects-topbar-items"
>
  <PerspectiveSelect
    className="projects-topbar-item js-projects-perspective-select"
  />
  <ProjectsSortingSelect
    className="projects-topbar-item js-projects-sorting-select"
    defaultOption="analysis_date"
  />
  <withRouter(SearchFilterContainer)
    className="projects-topbar-item projects-topbar-item-search"
    query={
      Object {
        "search": "test",
      }
    }
  />
  <div
    className="projects-topbar-item is-last"
  >
    <span>
      <strong
        id="projects-total"
      >
        12
      </strong>
       
      projects._projects
    </span>
  </div>
</header>
`;

exports[`should render correctly while loading 1`] = `
<header
  className="page-header projects-topbar-items"
>
  <PerspectiveSelect
    className="projects-topbar-item js-projects-perspective-select"
  />
  <ProjectsSortingSelect
    className="projects-topbar-item js-projects-sorting-select"
    defaultOption="analysis_date"
  />
  <withRouter(SearchFilterContainer)
    className="projects-topbar-item projects-topbar-item-search"
    isFavorite={true}
    query={
      Object {
        "search": "",
      }
    }
  />
  <div
    className="projects-topbar-item is-last is-loading"
  >
    <i
      className="spinner spacer-right"
    />
    <span>
      <strong
        id="projects-total"
      >
        2
      </strong>
       
      projects._projects
    </span>
  </div>
</header>
`;

exports[`should render disabled sorting options for visualizations 1`] = `
<header
  className="page-header projects-topbar-items"
>
  <PerspectiveSelect
    className="projects-topbar-item js-projects-perspective-select"
    view="visualizations"
    visualization="coverage"
  />
  <Tooltip
    overlay="projects.sort.disabled"
    placement="bottom"
  >
    <div
      className="projects-topbar-item disabled"
    >
      <ProjectsSortingSelect
        className="js-projects-sorting-select"
        defaultOption="analysis_date"
        view="visualizations"
      />
    </div>
  </Tooltip>
  <withRouter(SearchFilterContainer)
    className="projects-topbar-item projects-topbar-item-search"
  />
  <div
    className="projects-topbar-item is-last"
  />
</header>
`;

exports[`should render switch the default sorting option for anonymous users 1`] = `
<ProjectsSortingSelect
  className="projects-topbar-item js-projects-sorting-select"
  defaultOption="name"
  view="overall"
/>
`;

exports[`should render switch the default sorting option for anonymous users 2`] = `
<ProjectsSortingSelect
  className="projects-topbar-item js-projects-sorting-select"
  defaultOption="analysis_date"
  view="leak"
/>
`;
